Fixed scrollbars CSS and fixing project importer to import cascaded shadow maps as well.

--- a/css/dark.css
+++ b/css/dark.css
@@ -5,13 +5,11 @@ html, body {
 }
 
 /* Scrollbars */
-
-::-webkit-scrollbar-track {
+body ::-webkit-scrollbar-track {
   background: #333333 !important;
-  width: 25px;
 }
 
-::-webkit-scrollbar-thumb {
+body ::-webkit-scrollbar-thumb {
   border-radius: 15px !important;
 }
 
